--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -7,8 +7,8 @@
 {% block main %}
 <div class="jumbotron">
   <div class="container">
-    <h1>Hello, world!</h1>
-    <p>This is a simple starter template for a Flask Application</p>
+    <h1>Welcome To The Home Page For Properties R Us</h1>
+    <p>This is a basic, barebones home page for the company Properties R Us</p>
   </div>
 </div>
 {% endblock %}
